--- a/baking_recipes/app/views/recipes/index.html.erb
+++ b/baking_recipes/app/views/recipes/index.html.erb
@@ -1,1 +1,15 @@
-<h1>This is the homepage</h1>
+<h1>Welcome to CakeWalk!</h1>
+
+<div id="search">
+  <%= form_tag("/search", method: :get) do %>
+    <%= label_tag(:q, "Search for Recipes!") %>
+    <%= text_field_tag(:q) %>
+    <%= submit_tag("Search") %>
+    <%= label_tag %>
+  <% end %>
+</div>
+
+<% @recipes.each do |recipe| %>
+  <p><%= recipe.name %></p>
+  <p><%= recipe.description %></p>
+<% end %>
