--- a/baking_recipes/app/views/recipes/index.html.erb
+++ b/baking_recipes/app/views/recipes/index.html.erb
@@ -5,11 +5,8 @@
     <%= label_tag(:q, "Search for Recipes!") %>
     <%= text_field_tag(:q) %>
     <%= submit_tag("Search") %>
+    <% binding.pry %>
     <%= label_tag %>
   <% end %>
 </div>
 
-<% @recipes.each do |recipe| %>
-  <p><%= recipe.name %></p>
-  <p><%= recipe.description %></p>
-<% end %>
