pulled info from the database to display on recipe show page, information like description, time and method

--- a/baking_recipes/app/views/recipes/show.html.erb
+++ b/baking_recipes/app/views/recipes/show.html.erb
@@ -1,1 +1,7 @@
 <h1><%= @recipe.name %></h1>
+
+<h2><%= @recipe.description %></h2>
+
+<h2><%= @recipe.time %></h2>
+
+<h2><%= @recipe.method %></h2>
