added functionality that redirects to the home page from any page

--- a/baking_recipes/app/views/layouts/application.html.erb
+++ b/baking_recipes/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav id="home"><%= link_to 'Home', homes_path %></nav>
+  <nav id="home"><%= link_to 'Home', recipes_path %></nav>
 
   <div id="user_nav">
    <% if current_user %>
