added the ability to allow users to upload pictures to the recipes

--- a/baking_recipes/app/views/recipes/new.html.erb
+++ b/baking_recipes/app/views/recipes/new.html.erb
@@ -11,6 +11,9 @@
 
   <%= form.label :method %>
   <%= form.text_field :method %>
+
+  <%= form.file_field :image %>
+  <%= form.file_field :image %>
   
   <% @ingredients.each do |ingredient| %>
 
