--- a/baking_recipes/app/views/recipes/show.html.erb
+++ b/baking_recipes/app/views/recipes/show.html.erb
@@ -1,5 +1,11 @@
 <h1><%= @recipe.name %></h1>
 
+<div class="picture">
+  
+  <%= image_tag @recipe.image %>
+
+</div>
+
 <h2><%= @recipe.description %></h2>
 
 <h2><%= @recipe.time %></h2>
