added nav pills

--- a/baking_recipes/app/views/recipes/index.html.erb
+++ b/baking_recipes/app/views/recipes/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Bake It Off!</h1>
+<h1 class="title">Welcome to Bake It Off!</h1>
 
 <div id="search">
   <%= form_tag("/search", method: :get) do %>
