--- a/baking_recipes/app/views/recipes/new.html.erb
+++ b/baking_recipes/app/views/recipes/new.html.erb
@@ -13,7 +13,6 @@
   <%= form.text_field :method %>
 
   <%= form.file_field :image %>
-  <%= form.file_field :image %>
   
   <% @ingredients.each do |ingredient| %>
 
@@ -21,7 +20,8 @@
     <%= ingredient.name %>
 
     <% end %>
-
-  <%= form.submit 'Submit' %>
+  <div class="submit">
+    <%= form.submit 'Submit' %>
+  </div>
 
 <% end %>
