--- a/baking_recipes/app/views/layouts/application.html.erb
+++ b/baking_recipes/app/views/layouts/application.html.erb
@@ -9,17 +9,22 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav id="home"><%= link_to 'Home', recipes_path %></nav>
-
-  <div id="user_nav">
+  <nav class="nav navbar" role="navigation">
+    <ul class="nav nav-pills">
+      <li role="presentation" class="home"><%= link_to 'Home', recipes_path %>
+  <li role="presentation">
    <% if current_user %>
      Logged in as <%= current_user.email %>.
      <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
-   <% else %>
-     <%= link_to "Sign up", new_user_registration_path %> or
-     <%= link_to "log in", new_user_session_path %>
-   <% end %>
- </div>
+   <% else %></div>
+   <div class="sign_up">
+     <%= link_to "Sign up", new_user_registration_path %> Or
+     </div>
+     <div class="log_in">
+     <%= link_to "Log in", new_user_session_path %>
+   <% end %></div>  
+  </nav>
+ 
 
 <%= yield %>
 
