--- a/baking_recipes/app/views/recipes/show.html.erb
+++ b/baking_recipes/app/views/recipes/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @recipe.name %></h1>
+<h1 class="recipe_name"><%= @recipe.name %></h1>
 
 <div class="picture">
   
@@ -14,7 +14,7 @@
 
 <% @recipe.ingredients.each do |ingredient| %>
 
-  <h3 class="ingredient_name"><%= ingredient.name %></h3>
+  <ul><li class="ingredient_name"><%= ingredient.name %></li></ul>
 
 <% end %>
 
