--- a/baking_recipes/app/views/layouts/application.html.erb
+++ b/baking_recipes/app/views/layouts/application.html.erb
@@ -9,21 +9,17 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="nav navbar" role="navigation">
-    <ul class="nav nav-pills">
-      <li role="presentation" class="home"><%= link_to 'Home', recipes_path %>
-  <li role="presentation">
-   <% if current_user %>
-     Logged in as <%= current_user.email %>.
-     <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
-   <% else %></div>
-   <div class="sign_up">
-     <%= link_to "Sign up", new_user_registration_path %> Or
-     </div>
-     <div class="log_in">
-     <%= link_to "Log in", new_user_session_path %>
-   <% end %></div>  
-  </nav>
+     
+  <ul class="nav nav-pills">
+    <li role="presentation" class="active"><%= link_to 'Home', recipes_path %></li>
+    <% if !current_user %>
+      <li role="presentation" class=""><%= link_to "Sign up", new_user_registration_path %></li>
+      <li role="presentation"><%= link_to "Log in", new_user_session_path %></li>
+      <% else %>
+        Logged in as <%= current_user.email %>
+        <li role="presentation"><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+    <% end %>
+  </ul>
  
 
 <%= yield %>
