--- a/baking_recipes/app/views/layouts/application.html.erb
+++ b/baking_recipes/app/views/layouts/application.html.erb
@@ -11,13 +11,13 @@
 <body>
      
   <ul class="nav nav-pills">
-    <li role="presentation" class="active"><%= link_to 'Home', recipes_path %></li>
+    <li role="presentation" class="nav_link"><%= link_to 'Home', recipes_path %></li>
     <% if !current_user %>
-      <li role="presentation" class=""><%= link_to "Sign up", new_user_registration_path %></li>
+      <li role="presentation" class="nav_link"><%= link_to "Sign up", new_user_registration_path %></li>
       <li role="presentation"><%= link_to "Log in", new_user_session_path %></li>
       <% else %>
         Logged in as <%= current_user.email %>
-        <li role="presentation"><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+        <li role="presentation" class="nav_link"><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
     <% end %>
   </ul>
  
