--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Homes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.nav-pills {
+  background-color: rgb(222, 167, 61);
+  position: fixed;
+}
+
