--- a/baking_recipes/app/views/recipes/index.html.erb
+++ b/baking_recipes/app/views/recipes/index.html.erb
@@ -1,5 +1,7 @@
 <h1 class="title">Welcome to Bake It Off!</h1>
 
+<div class="background"></div>
+  
 <div id="search">
   <%= form_tag("/search", method: :get) do %>
     <%= label_tag(:q, "Search for Recipes!") %>
