added additonal seed data

--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -24,3 +24,8 @@
   text-align: center;
   padding: 100px;
 }
+
+.home-wrapper {
+  background-image: url("https://theproofofthepuddingdotnet.files.wordpress.com/2014/07/ingredients-for-strawberry-muffins.jpg");
+  background-position: cover;
+}
