--- a/baking_recipes/app/views/recipes/index.html.erb
+++ b/baking_recipes/app/views/recipes/index.html.erb
@@ -1,14 +1,15 @@
-<h1 class="title">Welcome to Bake It Off!</h1>
+<div class="home-wrapper">
 
-<div class="background"></div>
-  
-<div id="search">
-  <%= form_tag("/search", method: :get) do %>
-    <%= label_tag(:q, "Search for Recipes!") %>
-    <%= text_field_tag(:q) %>
-    <%= submit_tag("Search") %>
-    <%= label_tag %>
-  <% end %>
+  <h1 class="title">Welcome to Bake It Off!</h1>
+
+  <div id="search">
+    <%= form_tag("/search", method: :get) do %>
+      <%= label_tag(:q, "Search for Recipes!") %>
+      <%= text_field_tag(:q) %>
+      <%= submit_tag("Search") %>
+      <%= label_tag %>
+    <% end %>
+  </div>
 </div>
  
 
