--- a/baking_recipes/app/views/search/index.html.erb
+++ b/baking_recipes/app/views/search/index.html.erb
@@ -10,7 +10,7 @@
   <% if current_user %>
     <%= link_to 'Add a new Recipe', new_recipe_path %>
     <% else %>
-      <p> Please log in to add Recipes </p>
+      <p class="log_instructions">Please Log in to add Recipes</p>
   <% end %>
   <% @recipes.each do |recipe| %>
   <% end %>
