--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -29,3 +29,16 @@
   background-image: url("https://theproofofthepuddingdotnet.files.wordpress.com/2014/07/ingredients-for-strawberry-muffins.jpg");
   background-position: cover;
 }
+
+.form {
+  margin-left: auto;
+  margin-right: auto;
+
+  max-width: 500px;
+  background: #FFF;
+  padding: 20px 30px 20px 30px;
+  font: 12px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #888;
+  text-shadow: 1px 1px 1px #FFF;
+  border: 1px solid #DDD;
+}
