--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -41,4 +41,7 @@
   color: #888;
   text-shadow: 1px 1px 1px #FFF;
   border: 1px solid #DDD;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
 }
