--- a/baking_recipes/app/views/recipes/new.html.erb
+++ b/baking_recipes/app/views/recipes/new.html.erb
@@ -1,8 +1,10 @@
 <%= form_for (@recipe) do |form| %>
   
 <div class="form">
-  <%= form.label :name %>
-  <%= form.text_field :name %>
+  <div class="form_name">
+    <%= form.label :name %>
+    <%= form.text_field :name %>
+  </div>
 
   <%= form.label :description %>
   <%= form.text_field :description %>
