--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -59,3 +59,21 @@
   display: block;
   font-size: 11px;
 }
+
+.form_desc {
+  display: block;
+  margin: 0px 0px 5px;
+}
+
+.form_desc>span {
+  float: left;
+  width: 20%;
+  text-align: right;
+  padding-right: 10px;
+  margin-top: 10px;
+  color: #333;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: bold;
+}
+
+
