--- a/baking_recipes/app/views/recipes/new.html.erb
+++ b/baking_recipes/app/views/recipes/new.html.erb
@@ -6,14 +6,18 @@
     <%= form.text_field :name %>
   </div>
 
-  <%= form.label :description %>
-  <%= form.text_field :description %>
+  <div class="form_desc">
+    <%= form.label :description %>
+    <%= form.text_field :description %>
+ 
+    <%= form.label :time %>
+    <%= form.text_field :time %>
+  </div>
 
-  <%= form.label :time %>
-  <%= form.text_field :time %>
-
-  <%= form.label :method %>
-  <%= form.text_field :method %>
+  <div class="method">
+    <%= form.label :method %>
+    <%= form.text_field :method %>
+  </div>
 </div>
 
   <%= form.file_field :image %>
