styled the adding new recipe form

--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -76,4 +76,15 @@
   font-weight: bold;
 }
 
+.method {
+  color: #888;
+  height: 20px;
+  line-height: 15px;
+  margin-bottom: 16px;
+}
 
+.submit .button:hover {
+  color: #333;
+  background-color: #EBEBEB;
+  border-color: #ADADAD;
+}
