centered the upload image button

--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -87,4 +87,11 @@
   color: #333;
   background-color: #EBEBEB;
   border-color: #ADADAD;
+  margin: 0 auto;
+  padding: 15px;
+}
+
+#recipe_image {
+  margin: 0 auto;
+  padding: 15px;
 }
