--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -83,7 +83,7 @@
   margin-bottom: 16px;
 }
 
-.submit .button:hover {
+submit .button:hover {
   color: #333;
   background-color: #EBEBEB;
   border-color: #ADADAD;
@@ -94,4 +94,10 @@
 #recipe_image {
   margin: 0 auto;
   padding: 15px;
+  font-family: helvetica;
+  font-size: 16px;
+}
+
+.picture {
+  margin-right: 10px;
 }
