--- a/baking_recipes/app/assets/stylesheets/homes.scss
+++ b/baking_recipes/app/assets/stylesheets/homes.scss
@@ -12,7 +12,11 @@
 
 .title {
   text-align: center;
-  font-family: 'Lobster', cursive;
+  font-family: helvetica;
+  color: rgb(0, 3, 43);
+  font-size: 40px;
+  font-style: italic;
+  font-style: bold;
 }
 
 .recipe_name {
@@ -96,6 +100,10 @@ submit .button:hover {
   padding: 15px;
   font-family: helvetica;
   font-size: 16px;
+}
+
+.home-wrapper {
+  height: 660px;
 }
 
 .picture {
